tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.error
exit status 127
/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:640:2: Warning: variable 'DenomPow_3' exported from 'case' (line 618, column 17)
%  640| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, Sum_3, TermStr} = Fun_33(DenomPow_3, Ip_2, IpStr, Line, N_11, Prev_3, Primes_4, Pw_2, Sum_3, TermStr),
%     |  ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:640:41: Warning: variable 'Prev_3' exported from 'case' (line 618, column 17)
%  640| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, Sum_3, TermStr} = Fun_33(DenomPow_3, Ip_2, IpStr, Line, N_11, Prev_3, Primes_4, Pw_2, Sum_3, TermStr),
%     |                                         ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:640:65: Warning: variable 'Sum_3' exported from 'case' (line 618, column 17)
%  640| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, Sum_3, TermStr} = Fun_33(DenomPow_3, Ip_2, IpStr, Line, N_11, Prev_3, Primes_4, Pw_2, Sum_3, TermStr),
%     |                                                                 ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:650:2: Warning: variable 'DenomPow_3' exported from 'case' (line 618, column 17)
%  650| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr} = Fun_34(DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, PwStr, Sum_3, TermStr),
%     |  ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:650:41: Warning: variable 'Prev_3' exported from 'case' (line 618, column 17)
%  650| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr} = Fun_34(DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, PwStr, Sum_3, TermStr),
%     |                                         ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:650:74: Warning: variable 'Sum_3' exported from 'case' (line 618, column 17)
%  650| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr} = Fun_34(DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, PwStr, Sum_3, TermStr),
%     |                                                                          ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:660:2: Warning: variable 'DenomPow_3' exported from 'case' (line 618, column 17)
%  660| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, PadTerm_2, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr} = Fun_35(DenomPow_3, Ip_2, IpStr_2, Line, N_11, PadTerm, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr),
%     |  ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:660:52: Warning: variable 'Prev_3' exported from 'case' (line 618, column 17)
%  660| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, PadTerm_2, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr} = Fun_35(DenomPow_3, Ip_2, IpStr_2, Line, N_11, PadTerm, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr),
%     |                                                    ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:660:85: Warning: variable 'Sum_3' exported from 'case' (line 618, column 17)
%  660| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, PadTerm_2, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr} = Fun_35(DenomPow_3, Ip_2, IpStr_2, Line, N_11, PadTerm, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr),
%     |                                                                                     ^

N                               Integer Portion  Pow  Nth Term (33 dp)
"-----------------------------------------------------------------------------------------"
escript: exception error: an error occurred when evaluating an arithmetic expression
  in operator  +/2
     called as "0" + "96"
  in call from main:formatTerm/2 (/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl, line 574)
  in call from main:'-main/0-Fun_37_loop/6-0-'/6 (/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl, line 630)
  in call from main:main/0 (/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl, line 689)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
